# moodle-scripts

./: .gitignore  API-README.md  README-API.md  README.md  add_cohorts.py  cspell.json  delete_cohorts_with_prefix.py  delete_courses_in_category.py  dev-requirements.txt  diff_courses.py  diff_students.py  diff_teachers.py  prepare_courses.py  prepare_enrolment_methods.py  prepare_students.py  prepare_teachers_with_courses.py  preprocess_teachers_and_courses.py  pyproject.toml  requirements.txt
delete_moodle_courses/: README.md  delete_courses_in_category.py  requirements.txt
delete_moodle_courses/lib/: moodleclient.py
delete_moodle_entities/: README.md  delete_cohorts_with_prefix.py  delete_courses_in_category.py  dev-requirements.txt
delete_moodle_entities/lib/: moodle.py
lib/: cohort.py  config.py  io.py  moodle_api.py  passwords.py  schoolyear.py
onedrive/: sanitize_names_for_onedrive.py
prepare_moodle_import/: README.md  lib.py  prepare_cohorts.py  prepare_enrollment_methods.py  prepare_students.py
prepare_moodle_import/sample_data_for_import/: sample_enrollment_methods.csv  sample_students.csv
sample_moodle_import_files/: sample_cohorts.csv  sample_courses.csv  sample_students.csv  sample_teachers_with_courses.csv
sanitize-names-for-onedrive/: sanitize_names.py  test.py
tests/: test_course_to_category.py  test_preprocess.py
