[project]
name = "moodle-scripts"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.14.0",
    "munch>=4.0.0",
    "polars>=1.31.0",
    "progressbar2>=4.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "munch-stubs>=0.1.3",
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "ruff>=0.12.1",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "N",
    "C90",
    "I",
    "W",
    "UP",
    "PLR",
    "B",
    "SIM",
    "ANN",
    "BLE",
    "S",
    "A",
    "C4",
    "EXE",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "RSE",
    "RET",
    "TCH",
    "ARG",
    "PL",
    "FLY",
    "RUF",
    # "PD",
]
extend-ignore = [
    "E501",
    "PLR0911",
    "SIM108",
    "ANN201",
    "C408",
    "S113",
    "RET504",
]
